--- a/dissertation.sty
+++ b/dissertation.sty
@@ -4,6 +4,7 @@
 \usepackage{color}
 \usepackage[dvipsnames,rgb,table]{xcolor}
 \usepackage[utf8x]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage[linedheaders,parts,pdfspacing]{classicthesis}
 \usepackage{amsmath}
 %\usepackage{acronym}
@@ -160,39 +161,74 @@
 \renewcommand{\lstlistlistingname}{List of Listings}
 
 % Settings for Listings
-\lstset{ %
-	language=Haskell,							% choose the language of the code
-	basicstyle=\footnotesize,		% the size of the fonts that are used for the code
-	keywordstyle=\bfseries,					% set the keyword style
-	keywords={},
-	%numbers=left,							% where to put the line-numbers
-	identifierstyle=\ttfamily,
-	numberstyle=\scriptsize,				% the size of the fonts that are used for the line-numbers
-	stepnumber=2,							% the step between two line-numbers. If it's 1 each line
-											% will be numbered
-	numbersep=5pt,							% how far the line-numbers are from the code
-	backgroundcolor=\color{lightGray},			% choose the background color. You must add \usepackage{color}
-	showspaces=false,						% show spaces adding particular underscores
-	showstringspaces=false,					% underline spaces within strings
-	showtabs=false,							% show tabs within strings adding particular underscores
-	frame=single,								% adds a frame around the code
-	framerule=0pt,
-	abovecaptionskip=.7em,
-	belowcaptionskip=.7em,
-	tabsize=2,								% sets default tabsize to 2 spaces
-	captionpos=b,							% sets the caption-position to bottom
-	breaklines=true,						% sets automatic line breaking
-	breakatwhitespace=false,				% sets if automatic breaks should only happen at whitespace
-	title=\lstname,							% show the filename of files included with \lstinputlisting;
-											% also try caption instead of title
-	escapeinside={\%*}{*)},					% if you want to add a comment within your code
-	morekeywords={*,...}                    % if you want to add more keywords to the set
+
+\definecolor{lightgray}{gray}{0.96}
+\definecolor{gray_ulisses}{gray}{0.55}
+\definecolor{castanho_ulisses}{rgb}{0.71,0.33,0.14}
+\definecolor{preto_ulisses}{rgb}{0.41,0.20,0.04}
+\definecolor{green_ulises}{rgb}{0.2,0.75,0}
+
+\definecolor{midnightblue}{rgb}{0.2,0.2,0.7}
+\definecolor{dkblue}{rgb}{0,0,0.6}
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{listinggray}{gray}{0.92}
+
+% Settings for Listings
+\lstset{ 
+    basicstyle=\ttfamily, 
+    xleftmargin=\parindent,
+    keywordstyle=\bfseries\color{dkblue}, 
+    identifierstyle=\ttfamily,
+    commentstyle=\bfseries\color{gray}\textsl,
+    %commentstyle=\itshape\color{black},
+    stringstyle=\color{magenta}\upshape,
+    emphstyle=\color{red},
+    emphstyle={[2]\color{blue}},
+    texcl=false,
+    showspaces=false,
+    showstringspaces=false,
+    numbers=right,
+    numberstyle=\footnotesize,
+    numbersep=0pt,
+    breaklines=true,
+    tabsize=4,
+    backgroundcolor=\color{white},
+    frame=L
 }
 
-% Setting up snippet environment
-\lstnewenvironment{snippet}[1][]
-    {\lstset{float=htpb,#1}}
-    {}
+%\lstset{ %
+%    xleftmargin=\parindent,
+%    language=HaskellUlisses,                % choose the language of the code
+%    basicstyle=\ttfamily\footnotesize,      % the size of the fonts that are used for the code
+%    keywordstyle=\bfseries,                 % set the keyword style
+%    numbers=right,                          % where to put the line-numbers
+%    numberstyle=\scriptsize,                % the size of the fonts that are used for the line-numbers
+%    stepnumber=1,                           % the step between two line-numbers. If it's 1 each line
+%                                            % will be numbered
+%    numbersep=0pt,                          % how far the line-numbers are from the code
+%    %numbersep=7pt,                         % how far the line-numbers are from the code
+%    backgroundcolor=\color{white},          % choose the background color. You must add \usepackage{color}
+%    showspaces=false,                       % show spaces adding particular underscores
+%    showstringspaces=false,                 % underline spaces within strings
+%    showtabs=false,                         % show tabs within strings adding particular underscores
+%    frame=L,                                % adds a frame around the code
+%    %frame=single,
+%    %framerule=0.5pt,
+%    rulecolor=\color{black},                % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
+%    abovecaptionskip=.7em,
+%    belowcaptionskip=.7em,
+%    tabsize=2,                              % sets default tabsize to 2 spaces
+%    captionpos=b,                           % sets the caption-position to bottom
+%    breaklines=true,                        % sets automatic line breaking
+%    breakatwhitespace=false,                % sets if automatic breaks should only happen at whitespace
+%    title=\lstname,                         % show the filename of files included with \lstinputlisting;
+%                                            % also try caption instead of title
+%    escapeinside={\%*}{*)},                 % if you want to add a comment within your code
+%    %morekeywords={*,...},                  % if you want to add more keywords to the set
+%    %deletekeywords={...},                   % if you want to delete keywords from the given language
+%    commentstyle=\itshape\color{black},     % comment style
+%    %belowcaptionskip=1\baselineskip,
+%}
 
 % Arrow diagrams
 %\usepackage[all]{xy}  % de-comment if you need diagrams
@@ -457,3 +493,14 @@
 }
 
 \makeatother
+
+\def\CCBYNCND{\CCaux{by-nc-nd}{CCBYNCND.png}{CC BY-NC-ND}}
+\def\CCBYNCSA{\CCaux{by-nc-sa}{CCBYNCSA.png}{CC BY-NC-SA}}
+\def\CCBYNC{\CCaux{by-nc}{CCBYNC.png}{CC BY-NC}}
+\def\CCBYND{\CCaux{by-nd}{CCBYND.png}{CC BY-ND}}
+\def\CCBYSA{\CCaux{by-sa}{CCBYSA.png}{CC BY-SA}}
+\def\CCBY{\CCaux{by}{CCBY.png}{CC BY}}
+
+\def\CCaux#1#2#3{%
+\noindent\includegraphics[width=0.2\textwidth]{img/#2}\\{\bf\textsf{#3}}
+\\\url{https://creativecommons.org/licenses/#1/4.0/}\\}
