--- a/dissertation.bib
+++ b/dissertation.bib
@@ -225,6 +225,31 @@
   year={2019}
 }
 
+@misc{jno-5,
+  author    = {J.N. Oliveira}
+, title     = {Program Design by Calculation}
+, oldnote = {Draft of textbook in preparation (since 1998).}
+, note = {Draft of textbook in preparation, current version: April 2018. Informatics Department, University of Minho.}
+, restofnote = {The following chapters are already complete: {\em An introduction to pointfree programming}, \emph{Recursion in the pointfree style}, \emph{Why monads matter} and \emph{Quasi-inductive datatypes} \footnote{URL: \url{http://www.di.uminho.pt/~jno/ps/pdbc.pdf}.}}
+, year = {2008}
+}
+
+@inproceedings{selinger2004brief,
+  title={A brief survey of quantum programming languages},
+  author={Selinger, Peter},
+  booktitle={International Symposium on Functional and Logic Programming},
+  pages={1--6},
+  year={2004},
+  organization={Springer}
+}
+
+@inproceedings{innes2018machine,
+  title={On machine learning and programming languages},
+  author={Innes, Mike and Karpinski, Stefan and Shah, Viral and Barber, David and Saito Stenetorp, PLEPS and Besard, Tim and Bradbury, James and Churavy, Valentin and Danisch, Simon and Edelman, Alan and others},
+  year={2018},
+  organization={Association for Computing Machinery (ACM)}
+}
+
 @InProceedings{swiestra&duponcheel,
 author="Swierstra, S. Doaitse
 and Duponcheel, Luc",
