--- a/dissertation.bib
+++ b/dissertation.bib
@@ -134,7 +134,7 @@
 
 @misc{gist_2019, title={Sigma Selective}, url={https://web.archive.org/web/20190625225137/https://gist.github.com/copumpkin/d5bdbc7afda54ff04049b6bdbcffb67e}, author={Daniel Pebles}, year={2019}}
 
- @misc{dune_2018, title={A composable build system}, url={https://dune.build/}, author={Jane Street}, year={2018}} 
+@misc{dune_2018, title={A composable build system}, url={https://dune.build/}, author={Jane Street}, year={2018}} 
 
 @misc{meent2018introduction,
     title={An Introduction to Probabilistic Programming},
@@ -411,6 +411,46 @@ isbn="978-3-540-70639-7"
  address = {New York, NY, USA},
 } 
 
+@article{poll-aop,
+author = {Poll, Erik and Thompson, Simon},
+title = {Algebra of Programming by Richard Bird and Oege de Moor, Prentice Hall, 1996 (Dated 1997).},
+year = {1999},
+issue_date = {May 1999},
+publisher = {Cambridge University Press},
+address = {USA},
+volume = {9},
+number = {3},
+issn = {0956-7968},
+journal = {J. Funct. Program.},
+month = may,
+pages = {347–354},
+numpages = {8}
+}
+
+@article{brusilovsky1994teaching,
+  title={Teaching Programming to Novices: A Review of Approaches and Tools.},
+  author={Brusilovsky, P and others},
+  year={1994},
+  publisher={ERIC}
+}
+
+@article{swierstra_2008, title={Data types à la carte}, volume={18}, DOI={10.1017/S0956796808006758}, number={4}, journal={Journal of Functional Programming}, publisher={Cambridge University Press}, author={Swiestra, Wouter}, year={2008}, pages={423–436}}
+
+@book{rosenhouse2009monty,
+  title={The Monty Hall problem: the remarkable story of Math's most contentious brain teaser},
+  author={Rosenhouse, Jason and others},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
+
+@book{freyd1990categories,
+  title={Categories, allegories},
+  author={Freyd, Peter J and Scedrov, Andre},
+  year={1990},
+  publisher={Elsevier}
+}
+
 @article{oliveira2012towards,
   title={Towards a linear algebra of programming},
   author={Oliveira, Jos{\'e} N},
@@ -647,6 +687,85 @@ url = {https://EconPapers.repec.org/RePEc:bes:amstat:v:59:y:2005:m:august:p:276-
   author={Erwig, Martin and Kollmansberger, Steve}, 
   year={2006}, 
   pages={21–34}
+}
+
+@article{kim2019sampling,
+  title={Sampling techniques for big data analysis},
+  author={Kim, Jae Kwang and Wang, Zhonglei},
+  journal={International Statistical Review},
+  volume={87},
+  pages={S177--S191},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{dylus2018probabilistic,
+  title={Probabilistic Functional Logic Programming},
+  author={Dylus, Sandra and Christiansen, Jan and Teegen, Finn},
+  booktitle={International Symposium on Practical Aspects of Declarative Languages},
+  pages={3--19},
+  year={2018},
+  organization={Springer}
+}
+
+@inproceedings{paixao2020calculational,
+  title={Calculational Proofs in Relational Graphical Linear Algebra},
+  author={Paix{\~a}o, Jo{\~a}o and Soboci{\'n}ski, Pawe{\l}},
+  booktitle={Brazilian Symposium on Formal Methods},
+  pages={83--100},
+  year={2020},
+  organization={Springer}
+}
+
+@ARTICLE{7917368,
+
+  author={Q. {Liu} and S. J. {Qin} and T. {Chai}},
+
+  journal={IEEE Transactions on Industrial Informatics}, 
+
+  title={Unevenly Sampled Dynamic Data Modeling and Monitoring With an Industrial Application}, 
+
+  year={2017},
+
+  volume={13},
+
+  number={5},
+
+  pages={2203-2213},
+
+  doi={10.1109/TII.2017.2700520}}
+
+
+@inproceedings{10.1145/3203217.3205863,
+author = {Bartolini, Andrea and Borghesi, Andrea and Libri, Antonio and Beneventi, Francesco and Gregori, Daniele and Tinti, Simone and Gianfreda, Cosimo and Alto\`{e}, Piero},
+title = {The D.A.V.I.D.E. Big-Data-Powered Fine-Grain Power and Performance Monitoring Support},
+year = {2018},
+isbn = {9781450357616},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3203217.3205863},
+doi = {10.1145/3203217.3205863},
+abstract = {On the race toward exascale supercomputing systems are facing important challenges which limit the efficiency of the system. Among all, power and energy consumption fueled by the end of Dennard's scaling start to show their impact on limiting supercomputers peak performance and cost effectiveness.In this paper we present and describe a new methodology based on a set of HW and SW extensions for fine-grain monitoring of power and aggregation of them for fast analysis and visualization. We propose a turn-key system which uses MQTT communication layer, NoSQL database, fine grain monitoring and in future AI technology to measure and control power and performance. This methodology is shown as an integrated feature of the D.A.V.I.D.E. supercomputing machine.},
+booktitle = {Proceedings of the 15th ACM International Conference on Computing Frontiers},
+pages = {303–308},
+numpages = {6},
+keywords = {big data, high performance computing, AMESTER, beaglebone black, fine-grain power and performance monitoring},
+location = {Ischia, Italy},
+series = {CF '18}
+}
+
+@article{ZHOU2017350,
+title = "Machine learning on big data: Opportunities and challenges",
+journal = "Neurocomputing",
+volume = "237",
+pages = "350 - 361",
+year = "2017",
+issn = "0925-2312",
+doi = "https://doi.org/10.1016/j.neucom.2017.01.026",
+url = "http://www.sciencedirect.com/science/article/pii/S0925231217300577",
+author = "Lina Zhou and Shimei Pan and Jianwu Wang and Athanasios V. Vasilakos",
+keywords = "Machine learning, Big data, Data preprocessing, Evaluation, Parallelization",
+abstract = "Machine learning (ML) is continuously unleashing its power in a wide range of applications. It has been pushed to the forefront in recent years partly owing to the advent of big data. ML algorithms have never been better promised while challenged by big data. Big data enables ML algorithms to uncover more fine-grained patterns and make more timely and accurate predictions than ever before; on the other hand, it presents major challenges to ML such as model scalability and distributed computing. In this paper, we introduce a framework of ML on big data (MLBiD) to guide the discussion of its opportunities and challenges. The framework is centered on ML which follows the phases of preprocessing, learning, and evaluation. In addition, the framework is also comprised of four other components, namely big data, user, domain, and system. The phases of ML and the components of MLBiD provide directions for identification of associated opportunities and challenges and open up future work in many unexplored or under explored research areas."
 }
 
 @inproceedings{gordon2014probabilistic,
