Updates from Overleaf

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -184,7 +184,7 @@ This dissertation reports on academic work that can be used by third parties as 
 
     I would like to thank my co-supervisor, Andrey Mokhov, first and foremost, for welcoming me as his student and for proposing the subject of this master's thesis. Andrey's expertise was invaluable in the formulation of research questions and methodology. His insightful feedback pushed me to sharpen my thinking and brought my work to a higher level.
     
-    I would also like to express my sincere gratitude to my supervisor, Professor José N. Oliveira, for all his assistance and guidance. Without him, I wouldn't be able to tackle a lot of challenges that I've found along the way. I would like to thank you for the patient support and for all the opportunities I have been given to further my studies.
+    I would also like to express my sincere gratitude to my supervisor, Professor José N. Oliveira, for all his assistance and guidance. Without him, I wouldn't be able to tackle a lot of challenges that I've found along the way. I would like to thank him for his patient support and for all the opportunities I have been given to further my studies.
     
     While doing this work I held a Research Grant of the DaVinci Project funded by FEDER and by National Funds, so I wish to thank \grantsponsor{ GS100000001 }{ FCT (Portuguese Foundation for Science and Technology, I.P.) }{ http://dx.doi.org/10.13039/501100001871 } and all people involved in the project for the opportunity.
     
@@ -2005,8 +2005,8 @@ pg3 =
 	\chapter{Conclusions and Future Work}\label{ch-conclusion}
 	    This last chapter summarises the main  contributions of the dissertation. Directions for future work are also discussed.
 	
-	    \section{Conclusions}
-	        The work reported in this dissertation searched for ways to take advantages of \glspl{saf} in functional probabilistic programming. In particular, how this abstraction could be applied in a more efficient manner than the monadic \texttt{bind} was a central research question. First of all, it was important to understand the meaning of the probabilistic instances of such functors and what they could bring to the table, taking into account other existing solutions and methods.
+	   \section{Conclusions}
+	   The work reported in this dissertation searched for ways to take advantages of \glspl{saf} in functional probabilistic programming. In particular, how this abstraction could be applied in a more efficient manner than the monadic \texttt{bind} was a central research question. First of all, it was important to understand the meaning of the probabilistic instances of such functors and what they could bring to the table, taking into account other existing solutions and methods.
 	        % exist, and their drawbacks. 
 	        We centered on the general theory of \gls{laop} when searching for answers to the probabilistic meaning, and studied the structure of stochastic matrices, finding out that \glspl{saf} are capable of conditioning random variables and branching a program in two different ways. Viewed through this prism, \glspl{saf} generalise the already known McCarthy conditional and, in theory, allow for parallel execution of conditional probability calculations, by means of the divide-and-conquer block-matrix algebra law. A programming library of typed inductive block-matrices has been implemented in Haskell to demonstrate how such research could be applied in practice, by giving a number of examples and benchmarks demonstrating that the theoretical gains are indeed valid. 
 	        
@@ -2018,11 +2018,22 @@ pg3 =
 	        
 	    \section{Future work}
 	    
-	     The work presented in this dissertation highlights the themes of composition, abstraction and structure, all relevant concepts in functional programming. The majority of features developed during this research are focused on important core aspects of statically typed, purely functional languages. Monads, definitely the key driver of innovation, are difficult to express faithfully without a strong type system and functional purity, but as we have seen, these features have enabled us to have a great deal of reasoning power and have helped us to study novel abstractions in a different (probabilistic) context.
+	     The work presented in this dissertation highlights the themes of composition, abstraction and structure, all relevant concepts in functional programming. The majority of features developed during this research are focused on core aspects of statically typed, purely functional languages. Monads, definitely a key driver of innovation, cannot be faithfully expressed without a strong type system and functional purity. As we have seen these features have enabled us to have a great deal of reasoning power and have helped us to study novel abstractions in a different (probabilistic) context.
 	    
-	     One of the most important avenues for future work would also be to make the various pieces of software that have been developed during this research production-ready. Such projects necessarily have a proof-of-concept feel about them; they are meant to explore new fields, design spaces and opportunities. Specifically, quadtrees \citep{samet1984quadtree} and their savings with respect to repetitive cells (pixels) are brought to mind by the block-oriented matrix type, from the typed matrix programming library. A better matrix definition for sparsity could be more useful for sparse matrices with large zero blocks. The probabilistic programming \gls{edsl} can also be extended in order to support more distribution primitives and sampling algorithms. An interesting future direction is also to investigate how to improve the proposed solution in the light of the new found concurrency relationship, as well as studying parallelization strategies to improve performance. 
+	    All research projects typically have a proof-of-concept feel about them; they are meant to explore new fields, design spaces and opportunities. Specifically for this project, quadtrees \citep{samet1984quadtree} and their savings with respect to repetitive cells (pixels) were brought to mind by the block-oriented matrix type, from the typed matrix programming library. But this can be improved. For instance, a better matrix definition for sparsity could be more useful for sparse matrices with large zero blocks. 
+	    
+	    A strong suggestion for future work is to turn the various pieces of software that have been developed during this research into production-ready software artifacts.
+	    
+	    The probabilistic programming \gls{edsl} can also be extended in order to support more distribution primitives and sampling algorithms. An interesting direction for the future is also to investigate how to improve the proposed solution in the light of the new found concurrency relationship, as well as studying parallelization strategies to improve performance. 
 	     
-	     Still regarding the matrix programming library, a scientific paper was published in the Haskell 2020 Symposium \citep{Armando2020}. This paper attracted the attention of some scholars in the fields of computer science, mathematics and functional programming. In particular, two separate researchers, Conal Elliot and João Paixão, approached the authors showing interest in potential collaboration. These collaborations revolve around new possible future work directions, that also meet the researcher's objectives. In particular, Conal Elliot's work revolves around applying semantic elegance and rigor to library design and optimized implementation. To this end, he showed interest in investigating how by applying the denotational design technique to the structure of inductive matrices, we can understand the nature of linear algebra and find elegant, parallel, effective and correct algorithms. A concrete objective is to port something like the (inductive) matrix type to a purely functional programming language in a denotational design style. João Paixão is a professor of the Department of Computer Science at the Federal University of Rio de Janeiro and his work focuses on Linear Algebra and Numerical Methods Education, Graph Theory, String Diagrams and Graphic Linear Algebra. His work plan is to see if his Graphical Linear Algebra (GLA) language \citep{paixao2020calculational} is capable of expressing inductive matrices and take advantage of its correct-by-construction properties, in order to obtain easy and elegant proof of complex, classical linear algebra algorithms and axioms.
+	    The work regarding the matrix programming library led to a scientific paper published in the Haskell 2020 Symposium \citep{Armando2020}. This paper attracted the attention of 
+	    %some scholars in the fields of computer science, mathematics and functional programming. In particular, 
+	    two independent researchers, Conal Elliot and João Paixão, who approached the authors showing interest in potential collaboration. These collaborations point towards new future work directions.
+	    %, that also meet the researcher's objectives.
+	    
+	    In particular, Conal Elliot's work on applying semantic elegance and rigor to library design and optimized implementation led to his interest in investigating how, by applying the denotational design technique to the structure of inductive matrices, one can better understand the nature of linear algebra and find elegant, parallel, effective and correct algorithms. A concrete objective is to port something like the (inductive) matrix type to a purely functional programming language in a denotational design style. To this end, the Haskell programming language is being used to implement all the vocabulary and infrastructure required to start thinking about the problem, but due to the current limitations of the type system, the project is slowly being rewritten in Agda\footnote{The Haskell project: \href{https://github.com/conal/linalg}{https://github.com/conal/linalg}}.
+	    
+	    João Paixão is a professor of the Department of Computer Science at the Federal University of Rio de Janeiro and his work focuses on Linear Algebra and Numerical Methods Education, Graph Theory, String Diagrams and Graphic Linear Algebra. His work plan is to see if his Graphical Linear Algebra (GLA) language \citep{paixao2020calculational} is capable of expressing inductive matrices taking advantage of its correct-by-construction properties, in order to obtain easy and elegant proof of complex, classical linear algebra algorithms and axioms.
 	     
 	\bookmarksetup{startatroot} % Ends last part.
 	\addtocontents{toc}{\bigskip} % Making the table of contents look good.
