Updates from Overleaf

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -2028,10 +2028,10 @@ pg3 =
 	     
 	    The work regarding the matrix programming library led to a scientific paper published in the Haskell 2020 Symposium \citep{Armando2020}. This paper attracted the attention of 
 	    %some scholars in the fields of computer science, mathematics and functional programming. In particular, 
-	    two independent researchers, Conal Elliot and João Paixão, who approached the authors showing interest in potential collaboration. These collaborations point towards new future work directions.
+	    two independent researchers, Conal Elliott and João Paixão, who approached the authors showing interest in potential collaboration. These collaborations point towards new future work directions.
 	    %, that also meet the researcher's objectives.
 	    
-	    In particular, Conal Elliot's work on applying semantic elegance and rigor to library design and optimized implementation led to his interest in investigating how, by applying the denotational design technique to the structure of inductive matrices, one can better understand the nature of linear algebra and find elegant, parallel, effective and correct algorithms. A concrete objective is to port something like the (inductive) matrix type to a purely functional programming language in a denotational design style. To this end, the Haskell programming language is being used to implement all the vocabulary and infrastructure required to start thinking about the problem, but due to the current limitations of the type system, the project is slowly being rewritten in Agda\footnote{The Haskell project: \href{https://github.com/conal/linalg}{https://github.com/conal/linalg}}.
+	    In particular, Conal Elliott's work on applying semantic elegance and rigor to library design and optimized implementation led to his interest in investigating how, by applying the denotational design technique to the structure of inductive matrices, one can better understand the nature of linear algebra and find elegant, parallel, effective and correct algorithms. A concrete objective is to port something like the (inductive) matrix type to a purely functional programming language in a denotational design style. To this end, the Haskell programming language is being used to implement all the vocabulary and infrastructure required to start thinking about the problem, but due to the current limitations of the type system, the project is slowly being rewritten in Agda\footnote{The Haskell project: \href{https://github.com/conal/linalg}{https://github.com/conal/linalg}}.
 	    
 	    João Paixão is a professor of the Department of Computer Science at the Federal University of Rio de Janeiro and his work focuses on Linear Algebra and Numerical Methods Education, Graph Theory, String Diagrams and Graphic Linear Algebra. His work plan is to see if his Graphical Linear Algebra (GLA) language \citep{paixao2020calculational} is capable of expressing inductive matrices taking advantage of its correct-by-construction properties, in order to obtain easy and elegant proof of complex, classical linear algebra algorithms and axioms.
 	     
